--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
 		<maven-jar-plugin.version>2.3.2</maven-jar-plugin.version>
 
-		<zookeeper.version>3.4.8</zookeeper.version>
-		<zkclient.version>0.1</zkclient.version>
+		<zookeeper.version>3.4.5</zookeeper.version>
+		<zkclient.version>0.2-SNAPSHOT</zkclient.version>
 	</properties>
 
 	<build>
